syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";

import "google/protobuf/Empty.proto";
import "google/protobuf/timestamp.proto";

package CareerCloud.gRPC;

service SecurityLoginsLog{
	rpc GetSecurityLoginsLog(IdRequestLoginsLog) returns(SecurityLoginsLogPayLoad);
	rpc CreateSecurityLoginsLog(SecurityLoginsLogPayLoad) returns(google.protobuf.Empty);
	rpc UpdateSecurityLoginsLog(SecurityLoginsLogPayLoad) returns(google.protobuf.Empty);
	rpc DeleteSecurityLoginsLog(SecurityLoginsLogPayLoad) returns(google.protobuf.Empty);
}

message IdRequestLoginsLog{
	string Id = 1;
}

message SecurityLoginsLogPayLoad{
	    string Id = 1;
        string Login = 2;
        string SourceIP = 3;
        google.protobuf.Timestamp LogonDate = 4;
        bool IsSuccesful = 5;
}
